[FIX] fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ main {
     height: calc(100vh - 75px);
     background-color: black;
     color: #fff;
+    overflow: auto;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 body {
